Test profile corrected